--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 tensorflow
 dvc
-pandas
+# pandas
 notebook
 numpy
-matplotlib
-seaborn
+# matplotlib
+# seaborn
 python-box==6.0.2
 pyYAML
 tqdm
 ensure==1.0.2
 joblib
+scipy
 -e .
